# FFmpegPlay

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zj26/ffmpegplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NativeFFmpeg.cpp  NativeFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/zj26/ffmpegplay/: MainActivity.kt  PlayerManager.kt  PlayerMangle.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zj26/ffmpegplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
